cluster/workload/px-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: px-api-route
  namespace: project-exhibition
spec:
  parentRefs:
    - name: devdrill-gateway
      namespace: nginx-gateway
  hostnames:
    - 'px-api.hyeonwoo.com'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: px-api-service
          port: 3000
